# crosslibc

./: CMakeLists.txt  README  alloca.h  assert.h  atof.c  cppbase.cpp  ctype.c  ctype.h  float.h  heap.c  heap.h  limits.h  math.c  math.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  stdnoreturn.h  stoi.h  string.c  string.h  strtod.c  unistd.h  user-impl.h
STL/: cfloat  new  types
platform/: crt.c  linux-riscv.c
printf/: printf.h
sys/: types.h
